# autosynth-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
autosynth/: __init__.py
autosynth/modules/: __init__.py  fused_kernel.py  fused_special_embeddings.py  special_embeds.py  trainer.py
autosynth/spec/: __init__.py  collator.py  dataset.py  example.py  serialize.py  thread_dataset.py  tokens.py
src/modules/: partially_trainable_embeddings.py  trainer.py
src/spec/: dataset.py  example.py  serialize.py  tok_vocab.py
src/utils/: __init__.py
