[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosynth-llm"
version = "0.1.0"
description = "LLM Inference Platform"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Albert Marashi" }]
dependencies = [
    "torch",
    "numpy",
    "transformers",
    "trl",
    "cut-cross-entropy @ git+https://github.com/apple/ml-cross-entropy.git",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.setuptools]
packages = ["src"]
